--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,61 @@
+* {
+    margin: 0;
+}
+
+#logo {
+    height: 90px;
+    margin-top: 30px;
+}
+
 header {
+    background-image: url(../img/pattern.png);
+    background-color: blue;
+    height: 160px;
+
+}
+
+.article-info {
+    color: #666;
+}
+
+#published {
+    font-size: 0.7rem;
+}
+
+#autor {
+    color: aqua;
+}
+
+#marcatore {
+    color: blue;
+    color
+}
+
+#article-table {
+    margin-top: 30px;
+    width: 100%;
+    border-collapse: collapse;
+
+}
+
+.odd {
     background-color: #4ea0ff;
+}
+
+#article-link-1 {
+    background-image: url('../img/monitor.jpg');
+
+}
+
+#article-link-2 {
+    background-image: url('../img/graph.jpg');
+}
+
+.footer-image {
+    width: 250px;
+    height: 250px;
+    background-size: cover;
+    color: #ffffff;
+    padding: 10px;
+    margin-top: 25px;
 }
